Bug 25901 - [4.2 Regression] overloaded function is rejected
Summary: [4.2 Regression] overloaded function is rejected
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: 4.2.0
: P3 normal
Target Milestone: 4.2.0
Assignee: Not yet assigned to anyone
URL:
Keywords: rejects-valid
Depends on:
Blocks:
 
Reported: 2006-01-21 11:15 UTC by Martin Reinecke
Modified: 2006-01-24 13:43 UTC (History)
1 user (show)

See Also:
Host: x86_64-unknown-linux-gnu
Target: x86_64-unknown-linux-gnu
Build: x86_64-unknown-linux-gnu
Known to work: 4.0.2
Known to fail: 4.2.0
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Reinecke 2006-01-21 11:15:57 UTC
Current mainline gfortran rejects the code below:

module general_time
implicit none

  type gnsec
    integer :: int
  end type gnsec

  interface operator(+)
    module procedure &
      gn_addsec_int_post, gn_addsec_int_pre
  end interface

contains

  function gn_addsec_int_pre(interval, sec) result(isec)
    integer, intent(in) :: interval
    type(gnsec), intent(in) :: sec
    type(gnsec) :: isec

    isec = gn_addsec_int_post(sec, interval)
  end function gn_addsec_int_pre

  function gn_addsec_int_post(sec, interval) result(seci)
    type(gnsec), intent(in) :: sec
    integer, intent(in) :: interval
    type(gnsec) :: seci

    seci%int = sec%int + interval
  end function gn_addsec_int_post

end module general_time


martin@linux:~/tmp> gfortran -v -c bug2.f90
Using built-in specs.
Target: x86_64-unknown-linux-gnu
Configured with: /home/martin/software/gcc/configure --with-gmp=/home/martin/software/mygmp --with-mpfr=/home/martin/software/mympfr --prefix=/home/martin/software/ugcc --enable-languages=c++,fortran --enable-checking=release
Thread model: posix
gcc version 4.2.0 20060121 (experimental)
 /home/martin/software/ugcc/libexec/gcc/x86_64-unknown-linux-gnu/4.2.0/f951 bug2.f90 -quiet -dumpbase bug2.f90 -mtune=generic -auxbase bug2 -version -o /tmp/ccpO6EFZ.s
GNU F95 version 4.2.0 20060121 (experimental) (x86_64-unknown-linux-gnu)
        compiled by GNU C version 4.2.0 20060121 (experimental).
GGC heuristics: --param ggc-min-expand=98 --param ggc-min-heapsize=128005
 In file bug2.f90:23

  function gn_addsec_int_post(sec, interval) result(seci)
                            1
 In file bug2.f90:10

      gn_addsec_int_post, gn_addsec_int_pre
                       2
Error: Procedure 'gn_addsec_int_post' at (1) is already defined at (2)


This code was compiled without problems by gfortran a few days ago.
Comment 1 Paul Thomas 2006-01-22 19:54:29 UTC
I have just posted the patch that I intend to commit tomorrow.

Paul
Comment 2 Paul Thomas 2006-01-23 05:07:58 UTC
Subject: Bug 25901

Author: pault
Date: Mon Jan 23 05:07:52 2006
New Revision: 110106

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=110106
Log:
2005-01-23  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/25901
	* decl.c (get_proc_name): Replace subroutine and function
	attributes in "already defined" test by the formal arglist
	pointer being non-NULL.

	Fix regression in testing of admissability of attributes.
	* symbol.c (gfc_add_attribute): If the current_attr has
	non-zero intent, do not do the check for a dummy being
	used.
	* decl.c (attr_decl1): Add current_attr.intent as the
	third argument in the call to gfc_add_attribute.
	* gfortran.h: Add the third argument to the prototype
	for gfc_add_attribute.


2005-01-23  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/25901
	* gfortran.dg/internal references_2.f90: New test.

	Fix regression in testing of admissability of attributes.
	* gfortran.dg/intent_used_1.f90: New test.

Added:
    trunk/gcc/testsuite/gfortran.dg/intent_used_1.f90
    trunk/gcc/testsuite/gfortran.dg/internal_references_2.f90
Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/decl.c
    trunk/gcc/fortran/gfortran.h
    trunk/gcc/fortran/symbol.c
    trunk/gcc/testsuite/ChangeLog
    trunk/libgomp/Makefile.in
    trunk/libgomp/aclocal.m4
    trunk/libgomp/testsuite/Makefile.in

Comment 3 Andrew Pinski 2006-01-24 13:43:31 UTC
Fixed.
Comment 4 Paul Thomas 2006-01-27 22:16:30 UTC
Subject: Bug 25901

Author: pault
Date: Fri Jan 27 22:16:04 2006
New Revision: 110310

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=110310
Log:
2005-01-28  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/25964
	* resolve.c (resolve_function): Exclude statement functions from
	global reference checking.

	PR fortran/25084
	PR fortran/20852
	PR fortran/25085
	PR fortran/25086
	* resolve.c (resolve_function): Declare a gfc_symbol to replace the
	references through the symtree to the symbol associated with the
	function expresion. Give error on reference to an assumed character
	length function is defined in an interface or an external function
	that is not a dummy argument.
	(resolve_symbol): Give error if an assumed character length function
	is array-valued, pointer-valued, pure or recursive. Emit warning
	that character(*) value functions are obsolescent in F95.

	PR fortran/25416
	* trans-expr.c (gfc_conv_function_call): The above patch to resolve.c
	prevents any assumed character length function call from getting here
	except intrinsics such as SPREAD. In this case, ensure that no
	segfault occurs from referencing non-existent charlen->length->
	expr_type and provide a backend_decl for the charlen from the charlen
	of the first actual argument.

	Cure temp name confusion.
	* trans-expr.c (gfc_get_interface_mapping_array): Change name of
	temporary from "parm" to "ifm" to avoid clash with temp coming from
	trans-array.c.

	PR fortran/25124
	PR fortran/25625
	* decl.c (get_proc_name): If there is an existing
	symbol in the encompassing namespace, call errors
	if it is a procedure of the same name or the kind
	field is set, indicating a type declaration.

	PR fortran/20881
	PR fortran/23308
	PR fortran/25538
	PR fortran/25710
	* decl.c (add_global_entry): New function to check
	for existing global symbol with this name and to
	create new one if none exists.
	(gfc_match_entry): Call add_global_entry before
	matching argument lists for subroutine and function
	entries.
	* gfortran.h: Prototype for existing function, global_used.
	* resolve.c (resolve_global_procedure): New function
	to check global symbols for procedures.
	(resolve_call, resolve_function): Calls to this
	new function for non-contained and non-module
	procedures.
	* match.c (match_common): Add check for existing
	global symbol, creat one if none exists and emit
	error if there is a clash.
	* parse.c (global_used): Remove static and use the
	gsymbol name rather than the new_block name, so that
	the function can be called from resolve.c.
	(parse_block_data, parse_module, add_global_procedure):
	Improve checks for existing gsymbols.  Emit error if
	already defined or if references were to another type.
	Set defined flag.

	PR fortran/24276
	* trans-expr.c (gfc_conv_aliased_arg): New function called by 
	gfc_conv_function_call that coverts an expression for an aliased
	component reference to a derived type array into a temporary array
	of the same type as the component.  The temporary is passed as an
	actual argument for the procedure call and is copied back to the
	derived type after the call.
	(is_aliased_array): New function that detects an array reference
	that is followed by a component reference.
	(gfc_conv_function_call): Detect an aliased actual argument with
	is_aliased_array and convert it to a temporary and back again
	using gfc_conv_aliased_arg.

	PR fortran/25124
	PR fortran/25625
	* gfortran.dg/internal_references_1.f90: New test.

	PR fortran/25901
	* gfortran.dg/internal references_2.f90: New test.

	PR fortran/20881
	PR fortran/23308
	PR fortran/25538
	PR fortran/25710
	* gfortran.dg/global_references_1.f90: New test.
	* gfortran.dg/g77/19990905-1.f: Restore the error that
	there is a clash between the common block name and
	the name of a subroutine reference.

	PR fortran/25964
	* gfortran.dg/global_references_2.f90: New test.

	PR fortran/24276
	* gfortran.dg/aliasing_dummy_1.f90: New test.

	PR fortran/25084
	PR fortran/20852
	PR fortran/25085
	PR fortran/25086
	* gfortran.dg/assumed_charlen_function_1.f90: New test.
	* gfortran.dg/assumed_charlen_function_3.f90: New test.

	PR fortran/25416
	* gfortran.dg/assumed_charlen_function_2.f90: New test.

	PR fortran/25964
	* gfortran.dg/assumed_size_refs_3.f90: New test.

Added:
    branches/gcc-4_1-branch/gcc/testsuite/gfortran.dg/aliasing_dummy_1.f90
    branches/gcc-4_1-branch/gcc/testsuite/gfortran.dg/assumed_charlen_function_1.f90
    branches/gcc-4_1-branch/gcc/testsuite/gfortran.dg/assumed_charlen_function_2.f90
    branches/gcc-4_1-branch/gcc/testsuite/gfortran.dg/assumed_charlen_function_3.f90
    branches/gcc-4_1-branch/gcc/testsuite/gfortran.dg/assumed_size_refs_3.f90
    branches/gcc-4_1-branch/gcc/testsuite/gfortran.dg/global_references_1.f90
    branches/gcc-4_1-branch/gcc/testsuite/gfortran.dg/global_references_2.f90
    branches/gcc-4_1-branch/gcc/testsuite/gfortran.dg/internal_references_1.f90
    branches/gcc-4_1-branch/gcc/testsuite/gfortran.dg/internal_references_2.f90
Modified:
    branches/gcc-4_1-branch/gcc/fortran/ChangeLog
    branches/gcc-4_1-branch/gcc/fortran/decl.c
    branches/gcc-4_1-branch/gcc/fortran/gfortran.h
    branches/gcc-4_1-branch/gcc/fortran/match.c
    branches/gcc-4_1-branch/gcc/fortran/parse.c
    branches/gcc-4_1-branch/gcc/fortran/resolve.c
    branches/gcc-4_1-branch/gcc/fortran/symbol.c
    branches/gcc-4_1-branch/gcc/fortran/trans-expr.c
    branches/gcc-4_1-branch/gcc/testsuite/ChangeLog
    branches/gcc-4_1-branch/gcc/testsuite/gfortran.dg/g77/19990905-1.f