re PR fortran/25901 (overloaded function is rejected)

2005-01-23  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/25901
	* decl.c (get_proc_name): Replace subroutine and function
	attributes in "already defined" test by the formal arglist
	pointer being non-NULL.

	Fix regression in testing of admissability of attributes.
	* symbol.c (gfc_add_attribute): If the current_attr has
	non-zero intent, do not do the check for a dummy being
	used.
	* decl.c (attr_decl1): Add current_attr.intent as the
	third argument in the call to gfc_add_attribute.
	* gfortran.h: Add the third argument to the prototype
	for gfc_add_attribute.


2005-01-23  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/25901
	* gfortran.dg/internal references_2.f90: New test.

	Fix regression in testing of admissability of attributes.
	* gfortran.dg/intent_used_1.f90: New test.

From-SVN: r110106